src/test/ui/rfc1445/issue-61118-match-slice-forbidden-without-eq.stderr
error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/issue-61118-match-slice-forbidden-without-eq.rs:15:9
   |
LL |         A => (),
   |         ^

error: aborting due to previous error

